[package]
name = "rod"
version = "0.1.0"
authors = ["Joe Chasinga <jo.chasinga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "^0.8"
bincode = "1.3.3"
