[package]
name = "rod"
version = "0.1.0"
authors = ["Pan Chasinga <pchasinga@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "^0.8"
bincode = "1.3.3"
clap = "2.33.3"
pretty_env_logger = "0.4.0"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
warp = "0.3"



